feat(core): add newsletter, marketing automation, and wishlist enhancements
- Introduce newsletter subscription with public and backoffice endpoints
- Add marketing campaign automation with scheduled sending and retry logic
- Enhance wishlist to use core products instead of articles
- Extend product catalog with detailed DTO for public pages
- Add content module for blog posts and ticket events
- Update PayDunya configuration with branding options
- Improve error handling for request validation
- Update database schema with new tables and indexes