@@ -1,34 +1,50 @@
 package com.lifeevent.lid.wishlist.mapper;
 
+import com.lifeevent.lid.core.entity.Produit;
+import com.lifeevent.lid.core.entity.ProduitImage;
 import com.lifeevent.lid.wishlist.dto.WishlistDto;
-import com.lifeevent.lid.wishlist.entity.Wishlist;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class WishlistMapper {
     
-    public WishlistDto toDto(Wishlist entity) {
-        if (entity == null) {
+    public WishlistDto toDto(Produit produit) {
+        if (produit == null) {
             return null;
         }
-        
+
         return WishlistDto.builder()
-            .id(entity.getId())
-            .articleId(entity.getArticle().getId())
-            .articleName(entity.getArticle().getName())
-            .articleImage(entity.getArticle().getImg())
-            .price(entity.getArticle().getPrice())
-            .isFlashSale(entity.getArticle().getIsFlashSale())
-            .isFeatured(entity.getArticle().getIsFeatured())
-            .build();
+                .id(produit.getId())
+                .referenceProduitPartenaire(produit.getReferencePartenaire())
+                .name(produit.getNom())
+                .image(resolveMainImageUrl(produit))
+                .price(produit.getPrix())
+                .isFeatured(Boolean.TRUE.equals(produit.getIsFeatured()))
+                .isBestSeller(Boolean.TRUE.equals(produit.getIsBestSeller()))
+                .build();
     }
     
-    public List<WishlistDto> toDtoList(List<Wishlist> entities) {
-        return entities.stream()
-            .map(this::toDto)
-            .collect(Collectors.toList());
+    public List<WishlistDto> toDtoList(List<Produit> produits) {
+        return (produits == null ? List.<Produit>of() : produits).stream()
+                .map(this::toDto)
+                .filter(java.util.Objects::nonNull)
+                .toList();
+    }
+
+    private static String resolveMainImageUrl(Produit produit) {
+        List<ProduitImage> images = produit.getImages();
+        if (images == null || images.isEmpty()) return null;
+
+        ProduitImage principal = null;
+        for (ProduitImage img : images) {
+            if (img != null && Boolean.TRUE.equals(img.getEstPrincipale())) {
+                principal = img;
+                break;
+            }
+        }
+        ProduitImage chosen = principal != null ? principal : images.get(0);
+        return chosen != null ? chosen.getUrl() : null;
     }
 }
